[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/editor-assets-dock/AssetItem.gd" type="Script" id=1]

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 10, 0, 0, 0, 26, 0, 0, 0, 38, 0, 0, 0, 41, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 41, 0, 0, 0, 38, 0, 0, 0, 26, 0, 0, 0, 10, 0, 0, 0, 26, 0, 0, 0, 72, 0, 0, 0, 101, 0, 0, 0, 109, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 109, 0, 0, 0, 101, 0, 0, 0, 72, 0, 0, 0, 26, 0, 0, 0, 38, 0, 0, 0, 102, 0, 44, 2, 3, 253, 251, 255, 32, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 32, 0, 44, 2, 3, 0, 0, 0, 102, 0, 0, 0, 38, 0, 0, 0, 42, 0, 0, 0, 109, 253, 251, 255, 32, 253, 251, 255, 22, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 22, 253, 251, 255, 32, 0, 0, 0, 109, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 110, 253, 251, 255, 37, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 37, 0, 0, 0, 110, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 109, 253, 251, 255, 32, 253, 251, 255, 22, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 12, 253, 251, 255, 22, 253, 251, 255, 32, 0, 0, 0, 109, 0, 0, 0, 42, 0, 0, 0, 38, 0, 0, 0, 102, 0, 44, 2, 3, 253, 251, 255, 32, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 37, 253, 251, 255, 32, 0, 44, 2, 3, 0, 0, 0, 102, 0, 0, 0, 38, 0, 0, 0, 26, 0, 0, 0, 72, 0, 0, 0, 101, 0, 0, 0, 109, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 110, 0, 0, 0, 109, 0, 0, 0, 101, 0, 0, 0, 72, 0, 0, 0, 26, 0, 0, 0, 10, 0, 0, 0, 26, 0, 0, 0, 38, 0, 0, 0, 41, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 42, 0, 0, 0, 41, 0, 0, 0, 38, 0, 0, 0, 26, 0, 0, 0, 10 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 6 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 2.0
content_margin_bottom = 2.0
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 4
flags = 4
image = SubResource( 7 )
size = Vector2( 16, 16 )

[node name="AssetItem" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 2.0
margin_right = 1016.0
margin_bottom = 598.0

[node name="ResourcePreview" type="TextureRect" parent="Layout"]
margin_right = 1008.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
stretch_mode = 4

[node name="ResourceName" type="HBoxContainer" parent="Layout"]
margin_top = 104.0
margin_right = 1008.0
margin_bottom = 120.0
alignment = 1

[node name="ResourceTypeIcon" type="TextureRect" parent="Layout/ResourceName"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 5 )
stretch_mode = 4

[node name="ResourceLabel" type="Label" parent="Layout/ResourceName"]
margin_left = 20.0
margin_top = 1.0
margin_right = 1008.0
margin_bottom = 15.0
size_flags_horizontal = 3
clip_text = true
